fix: restore quotes to release workflow tag trigger
The release workflow wasn't triggering on tag pushes because the tag
pattern 'v*' lost its quotes, likely due to yq formatting in lefthook.
Without quotes, YAML interprets v* as an alias reference, breaking the
trigger and causing the workflow to run on all push events instead.

Changes:
- .github/workflows/release.yml: Restore quotes to tag pattern (v* → 'v*')
- lefthook.yml: Use --unwrapScalar=false instead of -P to preserve quotes

Fixes the issue where v0.4.7 release was created without binary artifacts
because the workflow never ran.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -5,7 +5,7 @@ pre-commit:
       run: ./gradlew spotlessCheck
     yaml-format:
       glob: '*.{yml,yaml}'
-      run: yq -i -P '.' {staged_files}
+      run: yq -i --unwrapScalar=false '.' {staged_files}
     python-format:
       glob: '*.py'
       run: ruff format {staged_files} && ruff check --fix {staged_files}
