ci: add persist-credentials: false to all checkout actions
Addresses ghalint policy violation checkout_persist_credentials_should_be_false.
All actions/checkout steps now explicitly set persist-credentials: false for security.

Fixed 27 violations across 14 workflow files with surgical edits preserving all formatting.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -69,6 +69,7 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ env.VALIDATED_REF || 'main' }}
+          persist-credentials: false
 
       - name: Setup Java
         uses: actions/setup-java@v5
