fix: use recursive glob pattern for yaml-format
- Change glob from '*.{yml,yaml}' to '**/*.{yml,yaml}' to include subdirectories
- Add comment noting yq v4+ requirement
- Ensures workflow files are actually processed by the updated yq flags

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,8 +4,8 @@ pre-commit:
       glob: '*.kt'
       run: ./gradlew spotlessCheck
     yaml-format:
-      glob: '*.{yml,yaml}'
-      run: yq -i --unwrapScalar=false '.' {staged_files}
+      glob: '**/*.{yml,yaml}'
+      run: yq -i --unwrapScalar=false '.' {staged_files} # Requires mikefarah/yq v4+
     python-format:
       glob: '*.py'
       run: ruff format {staged_files} && ruff check --fix {staged_files}
