ci: add permissions and timeout-minutes to runner workflows
- Add timeout-minutes to all jobs (10-30 min based on expected duration)
- Add permissions: contents: read to all jobs
- Completes ghalint compliance for runner-provision and runner-destroy

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -20,7 +20,6 @@ jobs:
       contents: read
     env:
       GH_HOST: github.com
-      GH_TOKEN: ${{ secrets.COPILOT_GH_TOKEN }}
 
     steps:
       - name: Checkout repository
@@ -60,6 +59,8 @@ jobs:
           gh --version
 
       - name: Authenticate GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.COPILOT_GH_TOKEN }}
         run: |
           if [ -z "$GH_TOKEN" ]; then
             echo "GH_TOKEN is not set; provide a fine-grained PAT in the copilot environment." >&2
