--- a/.github/workflows/runner-destroy.yml
+++ b/.github/workflows/runner-destroy.yml
@@ -16,14 +16,14 @@ on:
 env:
   TF_CLOUD_ORGANIZATION: "alberto"
   TF_WORKSPACE: "groovy-lsp-runner"
-  TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
-  TF_VAR_github_token: ${{ secrets.GH_PAT_RUNNER }}
-  TF_VAR_mgc_api_key: ${{ secrets.MGC_API_KEY }}
 
 jobs:
   check-runners:
     name: Check Existing Runners
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
     outputs:
       has_runners: ${{ steps.check.outputs.has-runners }}
     steps:
@@ -53,6 +53,12 @@ jobs:
     needs: check-runners
     if: needs.check-runners.outputs.has_runners == 'true' || github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      contents: read
+    env:
+      TF_VAR_github_token: ${{ secrets.GH_PAT_RUNNER }}
+      TF_VAR_mgc_api_key: ${{ secrets.MGC_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
@@ -67,10 +73,14 @@ jobs:
 
       - name: Terraform Init
         working-directory: infra/runner
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
         run: terraform init
 
       - name: Terraform Plan Destroy
         working-directory: infra/runner
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
         run: terraform plan -destroy -out=destroy.tfplan
 
       - name: Upload Destroy Plan
@@ -84,8 +94,13 @@ jobs:
     name: Terraform Destroy
     needs: plan-destroy
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    permissions:
+      contents: read
     # For scheduled runs, auto-approve; for manual, require approval
     environment: ${{ github.event_name == 'schedule' && 'cleanup' || 'production' }}
+    env:
+      TF_VAR_github_token: ${{ secrets.GH_PAT_RUNNER }}
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
@@ -106,10 +121,15 @@ jobs:
 
       - name: Terraform Init
         working-directory: infra/runner
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
         run: terraform init
 
       - name: Terraform Destroy
         working-directory: infra/runner
+        env:
+          TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
+          TF_VAR_mgc_api_key: ${{ secrets.MGC_API_KEY }}
         run: terraform apply -input=false destroy.tfplan
 
       - name: Verify Runners Removed
