ci: fix all ghalint policy violations
- Add timeout-minutes to all jobs (5-60 min based on expected duration)
- Add permissions: contents: read to all jobs (or appropriate perms)
- Move TF_VAR secrets from job-level env to step-level env
- Add permissions to reusable workflow calls (osv-scanner)

Fixes all 43 ghalint violations across 16 workflow files:
- actions-lint, ci, codeql, dependency-review
- extension, extension-nightly, extract-jenkins-metadata
- gradle-wrapper-validation, mirror-vscode-groovy
- osv-scanner, release, release-please
- runner-cleanup, runner-destroy, runner-provision

--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -19,6 +19,9 @@ jobs:
   validate:
     name: Validate
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout
@@ -78,6 +81,9 @@ jobs:
   test-matrix:
     name: Test (${{ matrix.os }})
     needs: validate
+    timeout-minutes: 20
+    permissions:
+      contents: read
     strategy:
       matrix:
         os: [windows-latest, macos-latest]
@@ -122,6 +128,9 @@ jobs:
     name: Package VSIX
     needs: validate
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout
