--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,9 @@ concurrency:
 jobs:
   check-paths:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      contents: read
     outputs:
       run_main_ci: ${{ steps.filter.outputs.run_main_ci }}
     steps:
@@ -118,6 +121,9 @@ jobs:
   check-runner:
     name: Check Runner Availability
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
     needs: check-paths
     # Skip for workflow_run - runner is already available from completed provisioning
     if: |
@@ -458,6 +464,9 @@ jobs:
   validate:
     name: Validation Check
     runs-on: ${{ github.event.inputs.runner_label == 'self-hosted' && 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted' && 'self-hosted' || 'ubuntu-latest' }}
+    timeout-minutes: 5
+    permissions:
+      contents: read
     needs: [build, check-runner, check-paths]
     if: always()
     steps:
@@ -512,6 +521,9 @@ jobs:
   dependency-check:
     name: Check Dependencies
     runs-on: ${{ github.event.inputs.runner_label == 'self-hosted' && 'self-hosted' || vars.CI_RUNNER_LABEL == 'self-hosted' && 'self-hosted' || 'ubuntu-latest' }}
+    timeout-minutes: 15
+    permissions:
+      contents: read
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
