--- a/.github/workflows/extract-jenkins-metadata.yml
+++ b/.github/workflows/extract-jenkins-metadata.yml
@@ -33,6 +33,7 @@ jobs:
   extract:
     name: Extract GDSL Metadata
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       contents: write
       packages: read
@@ -106,6 +107,9 @@ jobs:
     name: Notify on Failure
     needs: extract
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      issues: write
     if: failure()
     steps:
       - name: Create issue on failure
