--- a/.github/workflows/mirror-vscode-groovy.yml
+++ b/.github/workflows/mirror-vscode-groovy.yml
@@ -11,6 +11,9 @@ jobs:
   mirror:
     name: Sync to vscode-groovy
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      contents: read
     
     steps:
       - name: Checkout
