--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
     - uses: googleapis/release-please-action@16a9c90856f42705d54a6fda1823352bdc62cf38
       with:
