--- a/.github/workflows/extract-jenkins-metadata.yml
+++ b/.github/workflows/extract-jenkins-metadata.yml
@@ -33,6 +33,7 @@ jobs:
   extract:
     name: Extract GDSL Metadata
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       contents: write
       packages: read
@@ -40,6 +41,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          persist-credentials: false
 
       - name: Set up JDK 21
         uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5.1.0
@@ -104,6 +107,9 @@ jobs:
     name: Notify on Failure
     needs: extract
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      issues: write
     if: failure()
     steps:
       - name: Create issue on failure
