--- a/.github/workflows/mirror-vscode-groovy.yml
+++ b/.github/workflows/mirror-vscode-groovy.yml
@@ -11,12 +11,16 @@ jobs:
   mirror:
     name: Sync to vscode-groovy
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    permissions:
+      contents: read
     
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Setup Java (for Copybara)
         uses: actions/setup-java@f2beeb24e141e01a676f977032f5a29d81c9e27e # v5
