feat: add cross-platform smoke tests and simplify JAR naming
- Remove platform suffix from JAR name (gls-0.4.8.jar instead of gls-0.4.8-linux-amd64.jar)
  Java JARs are platform-independent, the suffix was misleading

- Add smoke-test job to release workflow with:
  - 5 platforms: ubuntu-24.04, ubuntu-24.04-arm, macos-15, windows-2022, windows-11-arm
  - 3 JDK versions: 17, 21, 11 (expected to fail due to bytecode target)
  - Runs java -jar gls-*.jar --help to verify JAR works

- Update release notes to clarify platform independence
- Update Homebrew formula URL to use simplified JAR name

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -21,7 +21,7 @@ pre-commit:
       run: shellcheck --rcfile tools/lint/shellcheckrc {staged_files}
     workflow-lint:
       glob: '.github/workflows/*.{yml,yaml}'
-      run: ghalint -c tools/lint/ghalint.yaml run
+      run: ghalint -c tools/lint/ghalint.yaml run && actionlint {staged_files}
 
 commit-msg:
   commands:
