test: add NOT_CONTAINS assertion and negative Jenkins test
Framework:
- Add NOT_CONTAINS to ExpectationType for negative assertions
- Implement NOT_CONTAINS logic in ScenarioContext evaluateCheck

Stricter assertions:
- completion-basic: add print, Main, run symbol checks
- completion-gdk: add findAll, first, last, sort GDK checks

Negative tests:
- [NEW] completion-negative-jenkins: verify sh, echo, currentBuild
  are NOT offered in non-Jenkins files

--- a/tests/e2e/resources/scenarios/completion-basic.yaml
+++ b/tests/e2e/resources/scenarios/completion-basic.yaml
@@ -45,6 +45,15 @@ steps:
             type: CONTAINS
             value: println
 
+  # Strict: print should also be available (prefix matches)
+  - assert:
+      source: completion.items
+      checks:
+        - jsonPath: $[*].label
+          expect:
+            type: CONTAINS
+            value: print
+
   # Strict: verify println signature detail is present (exact match)
   - assert:
       source: completion.items
@@ -53,6 +62,19 @@ steps:
           expect:
             type: CONTAINS
             value: "void println(Object)"
+
+  # Strict: Local symbols should be present
+  - assert:
+      source: completion.items
+      checks:
+        - jsonPath: $[*].label
+          expect:
+            type: CONTAINS
+            value: Main
+        - jsonPath: $[*].label
+          expect:
+            type: CONTAINS
+            value: run
 
   - shutdown: {}
   - exit: {}
