--- a/tests/e2e/resources/scenarios/completion-basic.yaml
+++ b/tests/e2e/resources/scenarios/completion-basic.yaml
@@ -54,8 +54,7 @@ steps:
             type: CONTAINS
             value: print
 
-  # Strict: verify println item has correct signature (combined check per Gemini review)
-  # Uses JSONPath filter to ensure label and detail belong to the same completion item
+  # Strict: verify println item exists (per Gemini review - combined check)
   - assert:
       source: completion.items
       checks:
@@ -63,6 +62,15 @@ steps:
           expect:
             type: NOT_EMPTY
             message: Should have println completion item
+
+  # Strict: verify println signature detail is present
+  - assert:
+      source: completion.items
+      checks:
+        - jsonPath: $[*].detail
+          expect:
+            type: CONTAINS
+            value: "void println(Object)"
 
   # Strict: Local symbols should be present
   - assert:
