fix: use exact detail format for NOT_CONTAINS assertion
Cursor review: contains() uses exact equality, not substring matching.
Changed 'Jenkins step' to 'Jenkins step (workflow-basic-steps)' to
properly detect Jenkins completions in negative test.

--- a/tests/e2e/resources/scenarios/completion-negative-jenkins.yaml
+++ b/tests/e2e/resources/scenarios/completion-negative-jenkins.yaml
@@ -84,7 +84,7 @@ steps:
         - jsonPath: $.items[*].detail
           expect:
             type: NOT_CONTAINS
-            value: "Jenkins step"
+            value: "Jenkins step (workflow-basic-steps)"
 
   # Test 3: Verify currentBuild global variable is NOT available
   - changeDocument:
