feat: add ANY_CONTAINS and NONE_CONTAINS assertion types
Framework enhancement for substring matching on array elements:
- ANY_CONTAINS: checks if any array element contains the substring
- NONE_CONTAINS: checks that no array element contains the substring

This enables more resilient tests that don't require exact format matching.
Now 'Jenkins step' matches 'Jenkins step (workflow-basic-steps)'.

--- a/tests/e2e/resources/scenarios/completion-negative-jenkins.yaml
+++ b/tests/e2e/resources/scenarios/completion-negative-jenkins.yaml
@@ -45,8 +45,8 @@ steps:
       checks:
         - jsonPath: $.items[*].detail
           expect:
-            type: NOT_CONTAINS
-            value: "Jenkins step (workflow-basic-steps)"
+            type: NONE_CONTAINS
+            value: "Jenkins step"
 
   # Test 2: Regular .groovy file should NOT have Jenkins 'sh' step
   - changeDocument:
@@ -83,8 +83,8 @@ steps:
       checks:
         - jsonPath: $.items[*].detail
           expect:
-            type: NOT_CONTAINS
-            value: "Jenkins step (workflow-basic-steps)"
+            type: NONE_CONTAINS
+            value: "Jenkins step"
 
   # Test 3: Verify currentBuild global variable is NOT available
   - changeDocument:
