fix: add groovy/status wait to definition tests to prevent flakiness
Race condition: textDocument/definition requests could be cancelled if
sent before server finished initialization. Now we wait for groovy/status
Ready notification before making requests.

Fixes flaky test: definition-class-reference

--- a/tests/e2e/resources/scenarios/definition-class-reference.yaml
+++ b/tests/e2e/resources/scenarios/definition-class-reference.yaml
@@ -5,6 +5,15 @@ workspace:
 steps:
   - initialize: {}
   - initialized: {}
+  # Wait for server to be ready before making requests
+  - waitNotification:
+      method: groovy/status
+      checks:
+        - jsonPath: $.status
+          expect:
+            type: EQUALS
+            value: Ready
+      timeoutMs: 180000
   - openDocument:
       path: 'Classes.groovy'
       languageId: 'groovy'
