test: add stricter assertions to completion E2E tests (#405)
* test: add stricter assertions to completion E2E tests

- completion-basic: add NOT_EMPTY check, exact signature match
- completion-gdk: add NOT_EMPTY checks, additional GDK method check (find)

* test: add NOT_CONTAINS assertion and negative Jenkins test

Framework:
- Add NOT_CONTAINS to ExpectationType for negative assertions
- Implement NOT_CONTAINS logic in ScenarioContext evaluateCheck

Stricter assertions:
- completion-basic: add print, Main, run symbol checks
- completion-gdk: add findAll, first, last, sort GDK checks

Negative tests:
- [NEW] completion-negative-jenkins: verify sh, echo, currentBuild
  are NOT offered in non-Jenkins files

* refactor: address Gemini review - use JSONPath filter for combined assertion

Uses $[?(@.label == 'println')] filter to ensure assertion checks a
specific completion item rather than separate label/detail checks that
could match different items.

* style: fix Kotlin formatting in ScenarioContext.kt

Fixes isEmpty function continuation line indentation per ktlint rules.

* fix: add NOT_EMPTY checks to negative Jenkins test

Addresses Cursor review: NOT_CONTAINS passes when array is empty,
which could mask a broken completion system. Now we verify completions
return results before checking they don't contain Jenkins items.

* fix: restore signature verification per Cursor review

The previous change removed the 'void println(Object)' detail check.
Now we verify both:
- println label exists (JSONPath filter)
- void println(Object) detail exists (CONTAINS check)

* fix: use exact detail format for NOT_CONTAINS assertion

Cursor review: contains() uses exact equality, not substring matching.
Changed 'Jenkins step' to 'Jenkins step (workflow-basic-steps)' to
properly detect Jenkins completions in negative test.

* feat: add ANY_CONTAINS and NONE_CONTAINS assertion types

Framework enhancement for substring matching on array elements:
- ANY_CONTAINS: checks if any arr

--- a/tests/e2e/resources/scenarios/completion-basic.yaml
+++ b/tests/e2e/resources/scenarios/completion-basic.yaml
@@ -1,5 +1,5 @@
 name: completion-basic
-description: Request completion for println in a simple Groovy class.
+description: Request completion for println in a simple Groovy class with strict assertions.
 workspace:
   fixture: completion-basic
 steps:
@@ -27,6 +27,16 @@ steps:
       extract:
         - variable: completion.items
           jsonPath: $.items
+
+  # Strict: completions must not be empty
+  - assert:
+      source: completion
+      checks:
+        - jsonPath: $.items
+          expect:
+            type: NOT_EMPTY
+
+  # Strict: println must be in the results
   - assert:
       source: completion
       checks:
@@ -34,6 +44,26 @@ steps:
           expect:
             type: CONTAINS
             value: println
+
+  # Strict: print should also be available (prefix matches)
+  - assert:
+      source: completion.items
+      checks:
+        - jsonPath: $[*].label
+          expect:
+            type: CONTAINS
+            value: print
+
+  # Strict: verify println item exists (per Gemini review - combined check)
+  - assert:
+      source: completion.items
+      checks:
+        - jsonPath: "$[?(@.label == 'println')]"
+          expect:
+            type: NOT_EMPTY
+            message: Should have println completion item
+
+  # Strict: verify println signature detail is present
   - assert:
       source: completion.items
       checks:
@@ -41,5 +71,19 @@ steps:
           expect:
             type: CONTAINS
             value: "void println(Object)"
+
+  # Strict: Local symbols should be present
+  - assert:
+      source: completion.items
+      checks:
+        - jsonPath: $[*].label
+          expect:
+            type: CONTAINS
+            value: Main
+        - jsonPath: $[*].label
+          expect:
+            type: CONTAINS
+            value: run
+
   - shutdown: {}
   - exit: {}
