--- a/tests/e2e/resources/scenarios/completion-gdk.yaml
+++ b/tests/e2e/resources/scenarios/completion-gdk.yaml
@@ -1,12 +1,12 @@
 name: completion-gdk
-description: Request completion for GDK methods and type parameters.
+description: Request completion for GDK methods and type parameters with strict assertions.
 workspace:
   fixture: completion-basic
 steps:
   - initialize: {}
   - initialized: {}
   
-  # Test GDK completion
+  # Test GDK completion on List
   - openDocument:
       path: src/GdkTest.groovy
       languageId: groovy
@@ -26,6 +26,16 @@ steps:
       extract:
         - variable: completion_gdk.items
           jsonPath: $.items
+
+  # Strict: GDK completions must not be empty
+  - assert:
+      source: completion_gdk
+      checks:
+        - jsonPath: $.items
+          expect:
+            type: NOT_EMPTY
+
+  # Strict: Core GDK methods must be present
   - assert:
       source: completion_gdk
       checks:
@@ -37,6 +47,31 @@ steps:
           expect:
             type: CONTAINS
             value: collect
+        - jsonPath: $.items[*].label
+          expect:
+            type: CONTAINS
+            value: find
+        - jsonPath: $.items[*].label
+          expect:
+            type: CONTAINS
+            value: findAll
+
+  # Strict: More GDK List methods
+  - assert:
+      source: completion_gdk
+      checks:
+        - jsonPath: $.items[*].label
+          expect:
+            type: CONTAINS
+            value: first
+        - jsonPath: $.items[*].label
+          expect:
+            type: CONTAINS
+            value: last
+        - jsonPath: $.items[*].label
+          expect:
+            type: CONTAINS
+            value: sort
 
   # Test Type Parameter completion
   - openDocument:
@@ -57,6 +92,16 @@ steps:
       extract:
         - variable: completion_type.items
           jsonPath: $.items
+
+  # Strict: Type completions must not be empty
+  - assert:
+      source: completion_type
+      checks:
+        - jsonPath: $.items
+          expect:
+            type: NOT_EMPTY
+
+  # Strict: String type must be in completions
   - assert:
       source: completion_type
       checks:
