test: add groovy/status wait to completion tests + formatting test
Consistency fixes:
- Add groovy/status wait to completion-basic, completion-gdk,
  completion-negative-jenkins to prevent flakiness

New test:
- formatting-basic.yaml for textDocument/formatting (Issue #393)

--- a/tests/e2e/resources/scenarios/completion-gdk.yaml
+++ b/tests/e2e/resources/scenarios/completion-gdk.yaml
@@ -5,7 +5,16 @@ workspace:
 steps:
   - initialize: {}
   - initialized: {}
-  
+  # Wait for server to be ready before making requests
+  - waitNotification:
+      method: groovy/status
+      checks:
+        - jsonPath: $.status
+          expect:
+            type: EQUALS
+            value: Ready
+      timeoutMs: 180000
+
   # Test GDK completion on List
   - openDocument:
       path: src/GdkTest.groovy
