--- a/tests/e2e/resources/scenarios/completion-negative-jenkins.yaml
+++ b/tests/e2e/resources/scenarios/completion-negative-jenkins.yaml
@@ -8,6 +8,15 @@ workspace:
 steps:
   - initialize: {}
   - initialized: {}
+  # Wait for server to be ready before making requests
+  - waitNotification:
+      method: groovy/status
+      checks:
+        - jsonPath: $.status
+          expect:
+            type: EQUALS
+            value: Ready
+      timeoutMs: 180000
 
   # Test 1: Regular .groovy file should NOT have Jenkins 'echo' step
   - openDocument:
